# IMC2025_domain_adaptation

./: .gitignore  README.md  pyproject.toml
checkpoints/: cmapss_baseline.pt
notebooks/: 1_mnist_da.ipynb  1_mnist_da_correction.ipynb  2_mimii_baseline.ipynb  3_n_cmapss_da.ipynb  mnist_da.ipynb
notebooks/utils/: utils.py
