[project]
name = "imc2025"
version = "0.1.0"
description = "Intelligent Maintenance Conference 2025 Workshop on Domain Adaptation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gpustat>=1.1.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "neptune>=1.14.0",
    "networkx>=3.4.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pyg-lib==0.4.0+pt24",
    "pyreadr>=0.5.3",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch==2.4.0",
    "torch-cluster>=1.6.3",
    "torch-geometric==2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "torchaudio==2.4.0",
    "torchinfo>=1.8.0",
    "torchvision==0.19.0",
    "tqdm>=4.67.1",
    "yacs>=0.1.8",
]
